# finam-mcp

./: .gitignore  .pre-commit-config.yaml  MIGRATION_GUIDE.md  README.md  mcp.json.example  pyproject.toml  server.py  test_tools.py
finam_mcp/: __init__.py  __main__.py
finam_mcp/application/: dtos.py
finam_mcp/application/interfaces/: client.py
finam_mcp/application/use_cases/: get_assets.py
finam_mcp/configs/: __init__.py
finam_mcp/infrastructure/core/: client.py
finam_mcp/infrastructure/log/: main.py  processors.py
finam_mcp/presentation/mcp/: main.py
finam_mcp/presentation/mcp/handlers/: __init__.py  client.py
src/: __init__.py  __main__.py
src/application/interfaces/: client.py
src/configs/: logger.py  server.py
src/finam_mcp/: __init__.py
src/finam_mcp/application/: dtos.py
src/finam_mcp/application/interfaces/: client.py
src/finam_mcp/configs/: __init__.py  server.py
src/finam_mcp/infrastructure/core/: client.py
src/finam_mcp/infrastructure/log/: main.py
src/finam_mcp/presentation/composition/di/providers/infrastructure/: finam_api_client.py
src/finam_mcp/presentation/mcp/: __init__.py  main.py
src/finam_mcp/presentation/mcp/handlers/: __init__.py  client.py
src/infrastructure/core/: client.py
src/infrastructure/log/: main.py
src/presentation/: __init__.py
src/presentation/composition/di/providers/infrastructure/: finam_api_client.py
src/presentation/mcp/: main.py
src/presentation/mcp/handlers/: client.py
tests/: test_get_assets_use_case.py  test_mic_list.py
