[project]
name = "finam-mcp"
version = "1.0.21"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.9,<3.0.0)",
    "aiohttp (>=3.12.15,<4.0.0)",
    "mcp[cli]>=1.16.0,<2.0.0",
    "structlog (>=25.4.0,<26.0.0)",
    "orjson (>=3.11.3,<4.0.0)",
    "dishka>=1.7.2",
]

[project.scripts]
finam_mcp = "finam_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
